--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		<p>&nbsp;</p>
 		<div class="row">
 			<div class="col-md-6 col-lg-4">
-				<img src="Image/carPrice.gif"  class="img-thumbnail">
+				<img src="image/CarPrice.gif"  class="img-thumbnail">
 			</div>	
 
 			<div class="col-md-6 col-lg-8">
@@ -165,7 +165,7 @@
 		</div>
 		<div class="row">			
 			<div class="col-md-6 col-lg-4">
-				<img src="Image/housePrice.gif"  class=" img-thumbnail">
+				<img src="Image/HousePrice.gif"  class=" img-thumbnail">
 			</div>		
 			<div class="col-md-6 col-lg-8">
 				<h2>Housing Price Predication</h2>	
@@ -247,89 +247,3 @@ $(document).ready(function(){
 });
 </script>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--
-
-binary search
-list =[3,5,2,4,6]
-x = 5
-step = 0
-
-max = int(len(list) - 1)
-min = 0
-while max >= min:
-    step += 1
-    i = int((max + min )/2)
-    if list[i] == x:
-        print(i)
-        break
-    elif list[i] > x:
-        max = i - 1
-    else:
-        min = i+1
-
-
-
-def swap(a,b):
-    temp = a
-    a = b
-    b = temp
-    return a,b
-    
-
-
-for i in range(length):
-    for j in range(length-i):
-        if list[j] > list[j+1]:
-            list[j],list[j+1] = swap(list[j],list[j+1])
-print(list)  
-
-
-#insertion Sort
-for i in range(1,length):
-    j = i
-    while (j>0 and list[j]> list[j-1]):
-        list[j],list[j-1] = swap(list[j],list[j-1])
-        j-=1        
-
-
-
-for i in range(length):
-    min = i
-    for j in range(i+1,length):
-        if(list[j]<list[min]):
-            min = j
-    list[i],list[min] = list[min],list[i]
-
-print(list)            
-        
-        -->
