--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 		</div>
 		<div class="row">			
 			<div class="col-md-6 col-lg-4">
-				<img src="Image/HousePrice.gif"  class=" img-thumbnail">
+				<img src="image/HousePrice.gif"  class=" img-thumbnail">
 			</div>		
 			<div class="col-md-6 col-lg-8">
 				<h2>Housing Price Predication</h2>	
@@ -183,7 +183,7 @@
 
 		<div class="row">
 			<div class="col-md-6 col-lg-4">
-				<img src="Image/jobSite.gif" class=" img-thumbnail">
+				<img src="image/jobSite.gif" class=" img-thumbnail">
 			</div>				
 			<div class="col-md-6 col-lg-8">
 				<h3>Job Notificatio/n Portal</h3>
