--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 			padding: 5px;
 			background-color: #000;
 		}
+		.hi{
+			font-size: 48px;
+		}
 
 	</style>
 </head>
@@ -71,7 +74,7 @@
 
 <div class="container-fluid" style="background-image: url('image/headImage.jpg'); background-repeat: no-repeat; background-size: cover; padding: 10%;" >
 	<div class="container text-white" >
-		<h1 class="text-center">Bonjour! I'm Usman</h1>
+		<h1 class="text-center text-uppercase hi"> Hi<!--Bonjour-->! I'm Usman</h1>
 		<p>Howdy! A bit about me</p>
 		<div class="container">
 			<div class="row">
@@ -211,7 +214,7 @@
 </div>
 <div class="container-fluid" style="background-color: #112F41; color: white; padding-top: 20px;">
 	<div class="container text-center" id="contact">
-		<h3> Connect</h3>
+		<h3> Get In Touch!</h3>
 		<div class="link">
 			<a href=" https://github.com/usmanIN" target="_blank">
 				<i class="p-5 display-1 fa fa-github"></i>
@@ -219,14 +222,14 @@
 			<a href="https://www.linkedin.com/comm/in/mohd-usman-gani-3a11031a1" target="_blank">
 				<i class="p-5 display-1 fa fa-linkedin-square"></i>
 			</a>	
-
+			<!--	
 			<a href="https://leideapad.wordpress.com" target="_blank">
 				<i class="p-5 display-1 fa fa-wordpress"></i>
-			</a>	
+			</a>-->	
 			<a href="https://twitter.com/95Gani" target="_blank">
 				<i class="p-5 display-1 fa fa-twitter"></i>			
 			</a>	
-			<a href="#" data-toggle="tooltip" data-placement="top" title="mohdusmangani95@gmail.com">
+			<a href="mailto:mohdusmangani95@gmail.com" data-toggle="tooltip" data-placement="top" title="mohdusmangani95@gmail.com">
 				<i class="p-5 display-1 fa fa-google-plus-official"></i>
 			</a>
 			
