Add Minor changes

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 	<div class="container">
 		<h3>Education</h3>
 		<p> <strong>2018-2020</strong>  Master In Computer Application</p>
-		I completed my MCA from Teerthanker Mahaveer Univeristy, Moradabad having an overall CGPA of 8.1.
+		I completed my MCA from Teerthanker Mahaveer Univeristy, Moradabad, India
 	</div>
 </div>
 <div class="container-fluid" style="background-color: #112F41; color: white; padding-top: 20px;">
