--- a/index.html
+++ b/index.html
@@ -229,8 +229,12 @@
 			<a href="https://twitter.com/95Gani" target="_blank">
 				<i class="p-5 display-1 fa fa-twitter"></i>			
 			</a>	
+			
 			<a href="mailto:mohdusmangani95@gmail.com" data-toggle="tooltip" data-placement="top" title="mohdusmangani95@gmail.com">
 				<i class="p-5 display-1 fa fa-google-plus-official"></i>
+			</a>
+			<a href="https://www.kaggle.com/ganics" target="_blank">
+				<i class="p-5 display-1 fa fa-kaggle"></i>
 			</a>
 			
 			<a href="https://www.facebook.com/M.Gani95" target="_blank">
