--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 				<i class="p-5 display-1 fa fa-google-plus-official"></i>
 			</a>
 			<a href="https://www.kaggle.com/ganics" target="_blank">
-				<i class="p-5 display-1 fa fa-kaggle"></i>
+				<i class="p-5 display-1 fab fa-kaggle"></i>
 			</a>
 			
 			<a href="https://www.facebook.com/M.Gani95" target="_blank">
